--- a/Back/database/config.json
+++ b/Back/database/config.json
@@ -1,3 +1,3 @@
 {
-    "token": "mongodb+srv://Vulduk:somegood@chubakka.eux9p.mongodb.net/BasicMessanger?retryWrites=true&w=majority"
+    "token": "mongodb+srv://Vulduk:newPasswordIsGreat@chubakka.eux9p.mongodb.net/BasicMessanger?retryWrites=true&w=majority"
 }
